Fixed alignment of content

--- a/style/style.css
+++ b/style/style.css
@@ -80,7 +80,7 @@ li {
 
     position: fixed;
     top: 40%;
-    left: 50%;
+    left: 45%;
     margin-top: -200px;
     margin-left: -200px;
         animation: fadein 2s;
